# Mobile-to-Linux-Embedded-Control-Safety-System-MCMS-

linux_controller/: CMakeLists.txt  main.cpp
linux_controller/engine/: control_engine.cpp  control_engine.h  sensor_data.h
linux_controller/logger/: logger.cpp  logger.h
linux_controller/server/: tcp_server.cpp  tcp_server.h
linux_controller/simulator/: simulator.cpp  simulator.h
